analytics student-details view progress btn issue, qna sticky menu reaonsive, header btn, qna table tooltip alignment

--- a/v2-library/_src/scss/ui-elements/buttons-v2.scss
+++ b/v2-library/_src/scss/ui-elements/buttons-v2.scss
@@ -1,22 +1,22 @@
-$disabled-color: #E9E9EA !default;
+$disabled-color: #e9e9ea !default;
 
 .tutor-btn {
 	display: inline-flex;
 	align-items: center;
-    font-weight: 400;
-    line-height: 1.4;
-    color: var(--tutor-primary);
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 10px 16px;
-    font-size: 16px;
-    border-radius: 6px;
+	font-weight: 400;
+	line-height: 1.4;
+	color: var(--tutor-primary);
+	text-align: center;
+	text-decoration: none;
+	vertical-align: middle;
+	user-select: none;
+	background-color: transparent;
+	border: 1px solid transparent;
+	padding: 10px 16px;
+	font-size: 16px;
+	border-radius: 6px;
 	cursor: pointer;
-    transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out;
+	transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out;
 
 	&[disabled],
 	&.disabled {
@@ -32,20 +32,20 @@ $disabled-color: #E9E9EA !default;
 	&-primary {
 		border-color: var(--tutor-primary);
 		background-color: var(--tutor-primary);
-		color: #FFFFFF;
+		color: #ffffff;
 
 		&:hover,
 		&:focus,
 		&:active {
-			color: #FFFFFF;
+			color: #ffffff;
 			border-color: var(--tutor-primary-hover);
 			background-color: var(--tutor-primary-hover);
 		}
 
 		&[disabled],
 		&.disabled {
-			border-color: #E9E9EA;
-			background-color: #E9E9EA;
+			border-color: #e9e9ea;
+			background-color: #e9e9ea;
 		}
 	}
 
@@ -55,34 +55,34 @@ $disabled-color: #E9E9EA !default;
 		&:hover,
 		&:focus,
 		&:active {
-			color: #FFFFFF;
+			color: #ffffff;
 			border-color: var(--tutor-primary-hover);
 			background-color: var(--tutor-primary-hover);
 		}
 
 		&[disabled],
 		&.disabled {
-			border-color: #E9E9EA;
+			border-color: #e9e9ea;
 		}
 	}
 
 	&-secondary {
-		border-color: #E0E6FA;
-		background-color: #E0E6FA;
+		border-color: #e0e6fa;
+		background-color: #e0e6fa;
 		color: var(--tutor-primary);
 
 		&:hover,
 		&:focus,
 		&:active {
-			color: #FFFFFF;
+			color: #ffffff;
 			border-color: var(--tutor-primary-hover);
 			background-color: var(--tutor-primary-hover);
 		}
 
 		&[disabled],
 		&.disabled {
-			border-color: #E9E9EA;
-			background-color: #E9E9EA;
+			border-color: #e9e9ea;
+			background-color: #e9e9ea;
 		}
 	}
 
@@ -90,7 +90,7 @@ $disabled-color: #E9E9EA !default;
 		padding: 4px !important;
 		position: relative;
 		&:after {
-			content: " ";
+			content: ' ';
 			position: absolute;
 			bottom: 0px;
 			left: 0;
@@ -112,7 +112,7 @@ $disabled-color: #E9E9EA !default;
 	&-ghost {
 		padding: 0px !important;
 		position: relative;
-		color: #757C8E; // @todo: to be changed
+		color: #757c8e; // @todo: to be changed
 
 		&:hover,
 		&:focus,
@@ -160,7 +160,6 @@ $disabled-color: #E9E9EA !default;
 			display: none;
 		}
 	}
-
 
 	// &.tutor-is-outline {
 	// 	background: transparent;
@@ -330,7 +329,6 @@ $disabled-color: #E9E9EA !default;
 	// }
 }
 
-
 // iconic button
 .tutor-icon {
 	&-btn-group {
@@ -346,7 +344,7 @@ $disabled-color: #E9E9EA !default;
 		height: 36px;
 		font-weight: 400;
 		line-height: 1.4;
-		color: #757C8E;
+		color: #757c8e;
 		text-align: center;
 		text-decoration: none;
 		vertical-align: middle;
@@ -367,30 +365,30 @@ $disabled-color: #E9E9EA !default;
 		&:focus,
 		&:active {
 			color: var(--tutor-primary-hover);
-			background-color: #E0E6FA;
+			background-color: #e0e6fa;
 		}
 
 		&[disabled],
 		&.disabled {
-			background-color: #E9E9EA;
+			background-color: #e9e9ea;
 		}
 
 		// secondary
 		&-secondary {
-			background-color: #E0E6FA;
+			background-color: #e0e6fa;
 			color: var(--tutor-primary);
 
 			&:hover,
 			&:focus,
 			&:active {
-				color: #FFFFFF;
+				color: #ffffff;
 				background-color: var(--tutor-primary-hover);
 			}
 
 			&[disabled],
 			&.disabled {
-				border-color: #E9E9EA;
-				background-color: #E9E9EA;
+				border-color: #e9e9ea;
+				background-color: #e9e9ea;
 			}
 		}
 
